--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -40,5 +40,5 @@ jobs:
           build-args: |
             COMMIT_TAG=${{ github.sha }}
           tags: |
-            sctx/overseerr:${{ steps.get_version.outputs.VERSION }}
-            ghcr.io/sct/overseerr:${{ steps.get_version.outputs.VERSION }}
+            milindpatel63/dianarequest:${{ steps.get_version.outputs.VERSION }}
+            ghcr.io/milindpatel63/dianarequest:${{ steps.get_version.outputs.VERSION }}
