--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,4 +1,4 @@
-name: overseerr
+name: dianarequest
 adopt-info: overseerr
 license: MIT
 summary: Request management and media discovery tool for the Plex ecosystem.
